src/c/x509/AttributeValue.h

/*
 * Generated by asn1c-0.9.23 (http://lionet.info/asn1c)
 * From ASN.1 module "PKIX1Explicit88"
 * 	found in "../../../asn.1/rfc3280-PKIX1Explicit88.asn"
 */

#ifndef	_AttributeValue_H_
#define	_AttributeValue_H_


#include <asn_application.h>

/* Including external dependencies */
#include <ANY.h>

#ifdef __cplusplus
extern "C" {
#endif

/* AttributeValue */
typedef ANY_t	 AttributeValue_t;

/* Implementation */
extern asn_TYPE_descriptor_t asn_DEF_AttributeValue;
asn_struct_free_f AttributeValue_free;
asn_struct_print_f AttributeValue_print;
asn_constr_check_f AttributeValue_constraint;
ber_type_decoder_f AttributeValue_decode_ber;
der_type_encoder_f AttributeValue_encode_der;
xer_type_decoder_f AttributeValue_decode_xer;
xer_type_encoder_f AttributeValue_encode_xer;

#ifdef __cplusplus
}
#endif

#endif	/* _AttributeValue_H_ */
#include <asn_internal.h>